@@ -59,6 +59,11 @@ endif
 include $(GNUSTEP_SYSTEM_ROOT)/Makefiles/clean.make
 
 #
+# Determine the environment variable name used by the dynamic loader
+#
+LD_LIB_PATH := $(shell $(LD_LIB_PATH_SCRIPT) $(GNUSTEP_HOST_OS))
+
+#
 # Host and target specific settings
 #
 ifeq ($(findstring solaris, $(GNUSTEP_TARGET_OS)), solaris)
